--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,66 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Maru Menu</title>
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- ✅ Lightbox2 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet" />
 </head>
 <body>
   <header>
-      <a href="index.html"><img src="images/maru_logo.png" alt="Maru Logo" style="height: 80px;"></a>
+    <a href="index.html">
+      <img src="images/maru_logo.png" alt="Maru Logo" style="height: 80px;">
+    </a>
     <nav>
       <a href="index.html">Home</a>
       <a href="menu.html">Menu</a>
     </nav>
   </header>
 
-    <section class="menu-section" id="sushi">
-      <h2>🍣 Sushi</h2>
-      <div class="menu-gallery">
-    <img src="images/sushifront.jpg" data-index="0" onclick="openLightbox(0)"><img src="images/sushiback.jpg" data-index="1" onclick="openLightbox(1)"></div></section>
-    <section class="menu-section" id="menu">
-      <h2>📜 Main Menu</h2>
-      <div class="menu-gallery">
-    <img src="images/menu1.jpg" data-index="4" onclick="openLightbox(4)"><img src="images/menu2.jpg" data-index="5" onclick="openLightbox(5)"><img src="images/menu3.jpg" data-index="6" onclick="openLightbox(6)"><img src="images/menu4.jpg" data-index="7" onclick="openLightbox(7)"><img src="images/menu5.jpg" data-index="8" onclick="openLightbox(8)"><img src="images/frontmenu.jpg" data-index="9" onclick="openLightbox(9)"></div></section>
-<div class="lightbox" id="lightbox">
-  <button class="lightbox-close" onclick="closeLightbox()">×</button>
-  <button class="lightbox-nav lightbox-prev" onclick="prevImage()">❮</button>
-  <img id="lightbox-img" src="">
-  <button class="lightbox-nav lightbox-next" onclick="nextImage()">❯</button>
-</div>
+  <section class="menu-section" id="sushi">
+    <h2>🍣 Sushi</h2>
+    <div class="menu-gallery">
+      <a href="images/sushifront.jpg" data-lightbox="sushi" data-title="Sushi Front">
+        <img src="images/sushifront.jpg" alt="Sushi Front">
+      </a>
+      <a href="images/sushiback.jpg" data-lightbox="sushi" data-title="Sushi Back">
+        <img src="images/sushiback.jpg" alt="Sushi Back">
+      </a>
+    </div>
+  </section>
 
-<script>
-const images = ['sushifront.jpg', 'sushiback.jpg', 'menu1.jpg', 'menu2.jpg', 'menu3.jpg', 'menu4.jpg', 'menu5.jpg', 'frontmenu.jpg'];
-let currentIndex = 0;
-const lightbox = document.getElementById("lightbox");
-const lightboxImg = document.getElementById("lightbox-img");
+  <section class="menu-section" id="menu">
+    <h2>📜 Main Menu</h2>
+    <div class="menu-gallery">
+      <a href="images/menu1.jpg" data-lightbox="menu" data-title="Menu 1">
+        <img src="images/menu1.jpg" alt="Menu 1">
+      </a>
+      <a href="images/menu2.jpg" data-lightbox="menu" data-title="Menu 2">
+        <img src="images/menu2.jpg" alt="Menu 2">
+      </a>
+      <a href="images/menu3.jpg" data-lightbox="menu" data-title="Menu 3">
+        <img src="images/menu3.jpg" alt="Menu 3">
+      </a>
+      <a href="images/menu4.jpg" data-lightbox="menu" data-title="Menu 4">
+        <img src="images/menu4.jpg" alt="Menu 4">
+      </a>
+      <a href="images/menu5.jpg" data-lightbox="menu" data-title="Menu 5">
+        <img src="images/menu5.jpg" alt="Menu 5">
+      </a>
+      <a href="images/frontmenu.jpg" data-lightbox="menu" data-title="Front Menu">
+        <img src="images/frontmenu.jpg" alt="Front Menu">
+      </a>
+    </div>
+  </section>
 
-function openLightbox(index) {
-  currentIndex = index;
-  lightbox.style.display = "flex";
-  lightboxImg.src = "images/" + images[currentIndex];
-}
+  <footer>
+    <p>© 2025 Maru Restaurant | 126 Maple Ave W, Vienna, VA</p>
+  </footer>
 
-function closeLightbox() {
-  lightbox.style.display = "none";
-}
-
-function prevImage() {
-  currentIndex = (currentIndex - 1 + images.length) % images.length;
-  lightboxImg.src = "images/" + images[currentIndex];
-}
-
-function nextImage() {
-  currentIndex = (currentIndex + 1) % images.length;
-  lightboxImg.src = "images/" + images[currentIndex];
-}
-
-document.addEventListener('keydown', function(e) {
-  if (e.key === 'ArrowRight') nextImage();
-  else if (e.key === 'ArrowLeft') prevImage();
-  else if (e.key === 'Escape') closeLightbox();
-});
-</script>
-
-<footer>
-  <p>© 2025 Maru Restaurant | 126 Maple Ave W, Vienna, VA</p>
-</footer>
+  <!-- ✅ Lightbox2 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox-plus-jquery.min.js"></script>
 </body>
 </html>
