--- a/index.html
+++ b/index.html
@@ -70,9 +70,14 @@ window.addEventListener("scroll", function() {
       <div class="map-details">
         <h3>Maru Korean Cuisine & Sushi</h3>
         <p> Phone: (703) 273-1744 <br>
-			126 Maple Ave W, Vienna, VA 22180<br>
-		  Hours:
-			 11:30 AM – 9:30 PM (Tuesday - Sunday) </p>
+			126 Maple Ave W, Vienna, VA 22180<br>	  
+		  </p>
+		  <p>
+			 Hours:<br>
+  			<strong>Tuesday, Wednesday, Sunday :</strong> 11:30 AM – 9:30 PM<br>
+  			<strong>Thursday, Friday, Saturday :</strong> 11:30 AM – 10:30 PM<br>
+ 			<strong>Monday :</strong> Closed
+		</p>
       </div>
     </div>
   </section>
